--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -25,6 +25,15 @@
       <url-pattern>/</url-pattern>
   </servlet-mapping>
   
+  <filter>
+  	<filter-name>CSPFilter</filter-name>
+  	<filter-class>web.CSPFilter</filter-class>
+  </filter>
+  <filter-mapping>
+  	<filter-name>CSPFilter</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
+  
 	<session-config>
 		<session-timeout>10</session-timeout>
 		<cookie-config>
